--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -78,7 +78,7 @@ h6 {
   visibility: hidden;
   opacity: 0;
   right: 15px;
-  bottom: 15px;
+  top: 80px;
   z-index: 996;
   background: #106eea;
   width: 40px;
